<resources>
    <string name="app_name">DomBuketa</string>
    <string name="menu_home_title_text">Товары</string>
    <string name="menu_favorits_title_text">Избранное</string>
    <string name="menu_shopping_cart_title_text">Корзина</string>
    <string name="menu_delivery_text">Доставка</string>
    <string name="menu_later_text">Не забыть</string>
    <string name="menu_settings_title_text">Настройки</string>

    <string name="fragment_details.btn_menu_fav">Избранное</string>
    <string name="fragment_details.btn_menu_later">Напомнить</string>
    <string name="fragment_details.btn_menu_share">Поделиться</string>
    <string name="fragment_details.no_product">Товар временно отсутствует</string>

    <string name="fragment_favorite.title_Visited">Просмотренные подарки</string>
    <string name="fragment_set.text_darkmode">Темный режим</string>
    <string name="fragment_set.text_lightmode">Светлый режим</string>
    <string name="fragment_set.clear_visited">Очистить просмотренные</string>
    <string name="fragment_set_text_warning">Списов просмотренных был удален</string>
    <string name="no_product_find">Товар не найден</string>

</resources>